For the archive jobs this was done with T6530: GPGME / QGpgME Extend Archivejobs to accept input / output from a filename. For the normal sign/encrypt/decrypt/verify jobs this still needs to be done to hopefully fix the performance problems for large files that are not signed/encrypted archives.
Description
Description
Revisions and Commits
Revisions and Commits
| rGPGMEPP Gpgme plus plus | |||
| rGPGMEPPc5177d3bcb4a cpp: Support new flags for direct signing/encryption of files | |||
| rM GPGME | |||
| rM18a0d72b1bba doc: Update NEWS | |||
| rMc631622484dc qt: Support verification of detached signatures directly from files | |||
| rM0221d7f28a31 core: Support direct encryption of file with gpg | |||
| rM963ace1f9f39 core: Support direct signing of file with gpg | |||
| rM5efd3486a9fa core: Support writing the decrypt/verify output directly to a file | |||
| rMe77a8ac0cc2e qt: Support verification of opaque signed data directly to/from files | |||
| rMa44d84772d61 qt: Support writing/reading signed/encrypted files directly to/from file | |||
| rM20b32e03503f qt: Support decryption (with verification) directly to/from files | |||
| rM0b3c8709f7e6 qt,doc: Document that Job::startIt() doesn't self-destruct Job on error | |||
| rM60c0fd7c955d cpp: Support new flags for direct signing/encryption of files | |||
| Status | Assigned | Task | ||
|---|---|---|---|---|
| Resolved | • ikloecker | T6351 Kleopatra: Performance problems when encrypting large files | ||
| Resolved | • ikloecker | T6550 GpgME / QGpgME Extend non-archive jobs to accept input / output from a filename | ||
| Resolved | • ikloecker | T7141 gpgme does not handle backslashes in file names correctly. |
Event Timeline
Comment Actions
All non-archive jobs have been extended to allow reading the input directly from files and to allow writing the output. directly to files.
This will be tested (implicitly) with T6351: Kleopatra: Performance problems when encrypting large files.